--- a/src/Сomponents/Card/Card.module.scss
+++ b/src/Сomponents/Card/Card.module.scss
@@ -2,7 +2,21 @@
     font-family: "MarvelPro"; 
     src: url("../../Assets/font/MavenPro-Regular.ttf"); 
   }
-
+.wrapper {
+    position: relative;
+    margin: 10px;
+    button {
+        position: absolute;
+        background-color: rgb(218, 99, 99);
+        color: #ffffff;
+        border: 0;
+        top: 10px;
+        right: 0px;
+        &:hover {
+          background-color: rgb(214, 24, 24);  
+        }
+    }
+}
 .card {
     display: flex;
     flex-direction: column;
@@ -10,8 +24,9 @@
     align-items: center;
     width: 200px;
     height: 275px;
+    margin-top: 10px;
     border: 1px rgb(219, 216, 216) solid;
-    border-radius: 20px;
+    border-radius: 10px;
     background-color: white;
 
     p {
@@ -24,6 +39,6 @@
     }
     img {
         width: 90%;
-        height: auto;
+        height: 150px;
     }
 }
